# opiniated

./: .pre-commit-config.yaml  pyproject.toml
examples/flask_admin_sqlalchemy/: .env.example  README.md  app.py  db.py  models.py  requirements.txt
examples/starlette_admin_mongoengine/: .env.example  README.md  main.py  models.py  requirements.txt
examples/starlette_admin_odmantic/: README.md  main.py  models.py  requirements.txt
src/opinionated_mixins/: __about__.py
src/opinionated_mixins/contrib/beanie/: person.py
src/opinionated_mixins/contrib/dataclasses/: person.py
src/opinionated_mixins/contrib/mongoengine/: person.py
src/opinionated_mixins/contrib/odmantic/: person.py
src/opinionated_mixins/contrib/pydantic/: person.py
src/opinionated_mixins/contrib/sqlalchemy/: person.py
src/opinionated_mixins/contrib/sqlmodel/: person.py
src/opinionated_mixins/contrib/tortoise/: __init__.py  person.py
src/opinionated_mixins/contrib/wtforms/: person.py
